# sipXsbc

./: .classpath  .gitignore  .project  Makefile.am  configure.ac  sipxsbc.spec.in
config-plugin/: Makefile.am  sipxplugin.beans.xml  sipxsbc-plugin.properties
config-plugin/plugin/: SipxsbcHook.html  SipxsbcHook.page  SipxsbcHook.properties  SipxsbcPage.html  SipxsbcPage.page
config-plugin/src/org/sipfoundry/sipxconfig/sipxsbc/: Sipxsbc.java  SipxsbcConfig.java  SipxsbcImpl.java  SipxsbcSettings.java
config-plugin/src/org/sipfoundry/sipxconfig/web/plugin/: SipxsbcHook.java  SipxsbcPage.java
etc/: Makefile.am  sipxsbc.cf  sipxsbc.properties  sipxsbc.xml
etc/sipXsbc/globals/: UserAgentExports.js
etc/sipXsbc/handlers/: inboundRequest.js  outboundRequest.js  outboundResponse.js  routeRequest.js
etc/sipXsbc/handlers/routeRequest.js.detail/: _404.js  conference.js  route.js
include/: Makefile.am  Makefile.in  SBCDataStore.h  SBController.h
src/: Makefile.am  Makefile.in  SBCDataStore.cpp  SBController.cpp  config.h.in  main.cpp
