include $(top_srcdir)/config/utility.am

cfgglobalsdir = $(SIPX_CONFDIR)/sipXsbc/globals
dist_cfgglobals_DATA = $(shell cd $(srcdir); find sipXsbc/globals -type f)

cfghandlersdir = $(SIPX_CONFDIR)/sipXsbc/handlers
dist_cfghandlers_DATA = $(shell cd $(srcdir); find sipXsbc/handlers -type f)

cfghandlersrrdir = $(SIPX_CONFDIR)/sipXsbc/handlers/routeRequest.js.detail
dist_cfghandlersrr_DATA = $(shell cd $(srcdir); find sipXsbc/handlers/routeRequest.js.detail -type f)

